--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "expo": "^52.0.23",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-loaders": "^3.0.1",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
