--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-iframe": "^1.8.5",
     "react-loaders": "^3.0.1",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
